# rust_graphql_example

./: Cargo.toml  README.md
data/: Clients.csv  InvoiceItems.csv  Invoices.csv
src/: db.rs  main.rs  models.rs  schema.rs
