[package]
name = "rust_graphql_example"
version = "0.1.0"
authors = ["andrewleverette <andrewleverette@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
juniper = "0.14.2"
juniper_rocket = "0.5.2"
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }